added test cases for FindMeetingTimeCommand and AddCalendarCommand